# rudimentaryGraphics

./: CMakeLists.txt  README.md  main.cpp
include/: GameState.hpp  Renderer.hpp
src/: Renderer.cpp
